--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/codejoes/Team-Builder#readme",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "inquirer": "^9.1.4"
+    "inquirer": "^9.1.4",
+    "jest": "^29.4.0"
   }
 }
